--- a/templates/includes/menu.html.twig
+++ b/templates/includes/menu.html.twig
@@ -18,6 +18,8 @@
         <form class="form-inline my-2 my-lg-0">
             <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
             <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+            <a class="nav-link" href="{{ path('app_login') }}"><b class="h5">CONNEXION</b></a>
+            <a class="nav-link" href="{{ path('register') }}"><b class="h5">INSCRIPTION</b></a>
         </form>
     </div>
 </nav>
