--- a/templates/includes/menu.html.twig
+++ b/templates/includes/menu.html.twig
@@ -16,8 +16,8 @@
             </li>
         </ul>
         <form class="form-inline my-2 my-lg-0">
-            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+            <input class="form-control mr-sm-2" type="search" placeholder="Rechercher" aria-label="Search">
+            <button class="btn btn-success my-2 my-sm-0" type="submit">Rechercher</button>
             {% if app.user %}
                 <a class="nav-link" href="{{ path('app_logout') }}"><b class="h5">DECONNEXION</b></a>
             {% elseif not app.user %}
