Signed-off-by: michel michael <m.michel@onlineformapro.com> Ajout de la recherche

--- a/templates/includes/menu.html.twig
+++ b/templates/includes/menu.html.twig
@@ -8,8 +8,13 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
+
             <li class="nav-item active">
-                <a class="nav-link" href="{{ path('liste_produits') }}"><b class="h5">LISTE DES PRODUITS</b> <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="{{ path('articles') }}"><b class="h5">ARTICLES</b> <span class="sr-only">(current)</span></a>
+            </li>
+
+            <li class="nav-item">
+                <a class="nav-link" href="{{ path('liste_produits') }}"><b class="h5">LISTE DES PRODUITS</b></a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="{{ path('liste_distributeurs') }}"><b class="h5">LISTE DES DISTRIBUTEURS</b></a>
